base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-sample-app-svc
  labels:
    app: my-sample-app
spec:
  type: NodePort
  selector:
    app: my-nginx   # deployment.yaml의 파드 라벨과 똑같아야 연결됩니다!
  ports:
    - protocol: TCP
      port: 80           # 인터넷 사용자가 접속할 포트
      targetPort: 3000    # 컨테이너(Nginx)가 바라보고 있는 포트
