base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-sample-app-ingress
  annotations:
    # 인터넷에서 접속 가능한 외부용 로드밸런서를 만들어라!
    alb.ingress.kubernetes.io/scheme: internet-facing
    # 파드(Pod)로 직접 트래픽을 보내라! (속도 최적화)
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-sample-app-svc
                port:
                  number: 80
